# obsidian-garden

./: Cargo.toml  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  test.yaml
notes/: Markdown.md  WikiLink.md  example.md  pagefind.yaml
src/: lib.rs  main.rs  metadata.rs  note.rs  site.rs  vault.rs  wikilink.rs
templates/default/: aside.html  base.html  menu.html  page.html  search_form.html  sidebar.html
templates/default/_static/: out.js  script.js  style.css
