[package]
name = "obsidian-garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
serde = { version = "1.0.173", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.43"
