[package]
name = "obsidian-garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version = "1.0.5", features = ["json", "loader"] }
petgraph = { version = "0.6.3", features = ["serde-1"] }
pulldown-cmark = "0.9.3"
serde = { version = "1.0.173", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.43"
walkdir = "2.3.3"
